@@ -6,6 +6,7 @@ Changes for 3.5.0
 - Bug Fix (1133) - Fix cdsEzCaRead/Write implementation 
 - Bug Fix (1132) - Increase ADC parser part limit to 6000 
 - Add installer support for kamioka,indigo,anu,uwa,cardiff,bham sites
+- Add awgtpman support for indigo,anu,uwa,cardiff,bham sites
 ==================================================================================================
 Changes for 3.4.3  
 ==================================================================================================
